# hyprpwmenu

./: README.md  build.sh  config.py  config.yaml  install.sh  main.py  pwrmenu.desktop  pwrmenu.spec  pyproject.toml  requirements.txt  showversion.sh  teste.py  updateversion.sh  version.txt
.github/: copilot-instructions.md
assets/: config.yaml  style.css
src/hyprpwmenu/: __init__.py  click.py  config.py  constants.py  kernel.py  util.py  window.py
src/hyprpwmenu/assets/: config.yaml  style.css
src/pwrmenu/: __init__.py
